--- a/src/input.css
+++ b/src/input.css
@@ -5,23 +5,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@layer base{ body{ font-family: 'Questrial',sans-serif; color: #1a1a1a; font-size: 18px; line-height: 26px;overflow-x: hidden; }
+
+@layer base{ body{
+     font-family: 'Questrial',sans-serif; color: #1a1a1a; font-size: 18px; line-height: 26px;overflow-x: hidden; 
+    }
+}
 
 @layer components{ .container{ max-width: 1375px; position: relative;} }
 
-@layer components{ .header_info::before{ content: ""; background: inherit; @apply absolute left-1/2 -translate-x-1/2 block h-full w-[1920px] -z-10 } } }
+ @layer components{ .header_info::before{ content: ""; background: inherit; @apply absolute left-1/2 -translate-x-1/2 block h-full w-[1920px] -z-10 } } 
 
 @layer components{ .bnr-slogan::before{ content: ""; background: #000; @apply absolute left-1/2 -translate-x-1/2 block w-[1920px] opacity-80 h-full -z-10 } }
 
 @layer components{ .btn{ width: 297px; line-height: 64px; background: #bf0000; text-align: center; font-size: 20px; font-weight: 400; font-family: 'Poppins'; text-transform: capitalize;  display: block;color: #fff;} }
 
+@layer components{ .card1{ max-width: 432px; width: 32%; min-height: 288px; background: #f5f5f5; position: relative; padding: 60px 30px 40px; } }
+
 @layer components{
-    .card1{
-        max-width: 432px;
-        width: 32%;
-        min-height: 288px;
-        background: #f5f5f5;
-        position: relative;
-        padding: 60px 30px 40px;
-    }
-}
+    main:before{
+         content: "";
+         background: url(../assets/main-overlay.png) no-repeat center / cover;
+         @apply absolute left-1/2 -translate-x-1/2  block w-[1920px] h-full
+     }
+ }
