--- a/src/input.css
+++ b/src/input.css
@@ -6,10 +6,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base{ body{
-     font-family: 'Questrial',sans-serif; color: #1a1a1a; font-size: 18px; line-height: 26px;overflow-x: hidden; 
-    }
-}
+@layer base{ body{ font-family: 'Questrial',sans-serif; color: #1a1a1a; font-size: 18px; line-height: 26px;overflow-x: hidden; } }
 
 @layer components{ .container{ max-width: 1375px; position: relative;} }
 
@@ -19,12 +16,10 @@
 
 @layer components{ .btn{ width: 297px; line-height: 64px; background: #bf0000; text-align: center; font-size: 20px; font-weight: 400; font-family: 'Poppins'; text-transform: capitalize;  display: block;color: #fff;} }
 
-@layer components{ .card1{ max-width: 432px; width: 32%; min-height: 288px; background: #f5f5f5; position: relative; padding: 60px 30px 40px; } }
+@layer components{ .card1{ max-width: 325px; width: 32%; min-height: 392px; background: #f5f5f5; position: relative; padding: 15px } }
 
-@layer components{
-    main:before{
-         content: "";
-         background: url(../assets/main-overlay.png) no-repeat center / cover;
-         @apply absolute left-1/2 -translate-x-1/2  block w-[1920px] h-full
-     }
- }
+
+@layer components{ .card2{ max-width: 350px; width: 32%; min-height: 288px; background: #f5f5f5; position: relative; padding: 30px; } }
+
+
+@layer components{ main:before{ content: ""; background: url(../assets/main-overlay.png) no-repeat center / cover; @apply absolute left-1/2 -translate-x-1/2  block w-[1920px] h-full } }
