--- a/src/input.css
+++ b/src/input.css
@@ -16,10 +16,15 @@
 
 @layer components{ .btn{ width: 297px; line-height: 64px; background: #bf0000; text-align: center; font-size: 20px; font-weight: 400; font-family: 'Poppins'; text-transform: capitalize;  display: block;color: #fff;} }
 
-@layer components{ .card1{ max-width: 325px; width: 32%; min-height: 392px; background: #f5f5f5; position: relative; padding: 15px } }
+@layer components{ .card1{ max-width: 436px; width: 32%; min-height: 288px; background: #f5f5f5; position: relative; padding: 50px 20px } }
 
 
-@layer components{ .card2{ max-width: 350px; width: 32%; min-height: 288px; background: #f5f5f5; position: relative; padding: 30px; } }
-
+@layer components{ .card2{ max-width: 380px; width: 32%; min-height: 392px; background: #f5f5f5; position: relative; padding: 30px; } }
 
 @layer components{ main:before{ content: ""; background: url(../assets/main-overlay.png) no-repeat center / cover; @apply absolute left-1/2 -translate-x-1/2  block w-[1920px] h-full } }
+
+@layer components{ .footer-top::before{ content: ""; background: #161c21; @apply absolute w-full h-full block left-0 opacity-70 } }
+
+@layer components{ .footer-nav ul li::before{ content: ""; background: #cfcfcf;  width: 1px; height: 15px; display: block; position: absolute; top: 50%; transform: translateY(-50%); left: -50px;}}
+
+@layer components{ .footer-nav  ul li:first-child::before{display: none;} }
